--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -82,7 +82,7 @@ header {
         }
     }
 }
-@media (min-width: map-get($breakpoint, littletablette)) and (max-width: map-get($breakpoint, bigtablette)) {
+@media (min-width: map-get($breakpoint, minitablette)) and (max-width: map-get($breakpoint, maxtablette)) {
     .logo {
         width: 200px;
         margin-top: 20px;
