--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,52 @@ header {
 }
 
 /*version ordi*/
+.img1, .img1--modifier {
+  width: 105%;
+  height: 310px;
+  position: relative;
+  right: 5px;
+  bottom: 90px;
+}
+
+.img1--modifier {
+  height: 500px;
+  bottom: 200px;
+}
+
+@media screen and (max-width: 767px) {
+  .img1, .img1--modifier {
+    width: 105%;
+    height: 200px;
+    position: relative;
+    bottom: 50px;
+  }
+  .img1--modifier {
+    width: 105%;
+    height: 200px;
+    position: relative;
+    bottom: 50px;
+    height: 350px;
+    bottom: 125px;
+  }
+}
+
+@media (min-width: null) and (max-width: null) {
+  .img1, .img1--modifier {
+    width: 105%;
+    height: 200px;
+    bottom: 40px;
+  }
+  .img1--modifier {
+    width: 105%;
+    height: 200px;
+    bottom: 40px;
+    height: 350px;
+    bottom: 130px;
+  }
+}
+
+/*version ordi*/
 footer {
   background-color: #353535;
   width: 100%;
@@ -217,6 +263,30 @@ footer ul i {
   }
   footer ul i {
     font-size: 16px;
+  }
+}
+
+/*version desktop*/
+.button {
+  width: 400px;
+  height: 80px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  border-radius: 35px;
+  color: #fff;
+  background: linear-gradient(#ff79da, #9356dc);
+  font-size: 30px;
+  text-decoration: none;
+  line-height: 80px;
+}
+
+@media screen and (max-width: 767px) {
+  .button {
+    width: 220px;
+    height: 50px;
+    margin-top: 30px;
+    font-size: 16px;
+    line-height: 50px;
   }
 }
 /*# sourceMappingURL=main.css.map */
