--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,13 @@
-@import'./utils/_variables.scss';
 
+@import'./utils/_variables.scss';
 @import'./utils/_mixin.scss';
 
-@import'./base/-base.scss';
+@import'./base/_base.scss';
 
 @import'./layout/_header.scss';
+@import'./layout/_images.scss';
+@import'./layout/_footer';
 
-@import'./layout/_footer.scss';
+@import'./composant/_bouton';
 
 
