--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 
 @import"./layout/_header.scss";
 @import"./layout/_images.scss";
+@import"./layout/_nav.scss";
 @import"./layout/_footer";
 
 @import"./composant/_bouton";
