--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ header {
   }
 }
 
-@media (min-width: null) and (max-width: null) {
+@media (min-width: 768px) and (max-width: 991px) {
   .img1, .img1--modifier {
     width: 105%;
     height: 200px;
@@ -179,6 +179,128 @@ header {
     bottom: 40px;
     height: 350px;
     bottom: 130px;
+  }
+}
+
+/*version desktop*/
+nav {
+  width: 100%;
+  margin-bottom: 50px;
+  font-family: "Roboto", "trebuchet MS", sans-serif;
+}
+
+nav h2 {
+  font-size: 40px;
+  margin-left: 30px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+nav > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+nav > ul > li {
+  width: 25%;
+  height: 75px;
+  background-color: #f6f6f6;
+  box-shadow: 2px 2px 6px #eaeaea;
+  list-style-type: none;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+
+nav > ul > li span {
+  width: 25px;
+  height: 25px;
+  color: #fff;
+  font-size: 15px;
+  border: 1px solid #9356dc;
+  background-color: #9356dc;
+  border-radius: 50%;
+  line-height: 25px;
+  display: flex;
+  justify-content: center;
+  margin-right: 20px;
+}
+
+nav > ul > li i {
+  color: grey;
+  font-size: 30px;
+  margin-right: 25px;
+}
+
+nav > ul > li p {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.navbar:hover {
+  background-color: #e4d5f6;
+  box-shadow: 3px 3px 6px #353535;
+}
+
+.navbar:hover i {
+  color: #9356dc;
+}
+
+@media screen and (max-width: 767px) {
+  nav {
+    margin-bottom: 15px;
+  }
+  nav h2 {
+    font-size: 23px;
+    margin-left: 20px;
+    margin-top: 30px;
+  }
+  nav > ul {
+    flex-wrap: wrap;
+  }
+  nav > ul > li {
+    width: 75%;
+    margin-bottom: 25px;
+  }
+  nav > ul > li span {
+    position: absolute;
+    left: 14px;
+  }
+  nav > ul > li i {
+    font-size: 20px;
+  }
+  nav > ul > li p {
+    font-size: 16px;
+    font-weight: normal;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  nav h2 {
+    font-size: 35px;
+    font-size: 32px;
+    margin-left: 25px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+  }
+  nav > ul {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  nav > ul > li {
+    width: 40%;
+    margin-left: 30px;
+    margin-bottom: 20px;
+  }
+  nav > ul > li i {
+    font-size: 25px;
+    margin-right: 15px;
+  }
+  nav > ul > li p {
+    font-size: 18px;
   }
 }
 
