--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -7,7 +7,7 @@
 @mixin shadow($x, $y, $blur, $color) {
     box-shadow: $x $y $blur $color;
 }
-@mixin titreh2 {
+@mixin titleh2 {
     font-size: 40px;
     margin: {
         left: 30px;
@@ -59,7 +59,7 @@
     padding-top: 30px;
     bottom: 60px;
 }
-@mixin boutonnouveau {
+@mixin butonnouveau {
     width: 120px;
     height: 40px;
     font-size: 25px;
@@ -73,7 +73,7 @@
     bottom: 210%;
     left: 70%;
 }
-@mixin bouton_nouveau_portable {
+@mixin butonnouveauportable {
     width: 80px;
     height: 30px;
     font-size: 15px;
@@ -81,7 +81,7 @@
     bottom: 225%;
     left: 68%;
 }
-@mixin boutonnouveautablette {
+@mixin butonnouveautablette {
     width: 100px;
     height: 35px;
     font-size: 20px;
