--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -11,7 +11,7 @@ section{
         width: 100%;
     }
 
-    & .resto{
+    & .img_resto{
         width: 35%;
         height: 320px;
         margin: auto;
