--- a/menu/css/style_1.css
+++ b/menu/css/style_1.css
@@ -26,113 +26,47 @@ footer {
 
 header {
   overflow: hidden;
+  height: 500px;
 }
 
-.logo {
-  width: 20%;
-  display: block;
-  margin: auto;
-  margin-top: 40px;
-  margin-bottom: 20px;
-}
-
-.recherche {
+.banner {
   width: 100%;
-  height: 100px;
-  background-color: #eaeaea;
-  box-shadow: inset;
-  box-shadow: 2px 2px 5px #9c9a9a;
+  background-color: #fff;
   display: flex;
-  justify-content: center;
   align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  z-index: 1;
 }
 
-.recherche i {
-  font-size: 30px;
+.banner i {
+  font-size: 40px;
+  color: black;
+  margin-left: 20px;
 }
 
-.recherche .search {
-  width: 19%;
-  font-size: 28px;
-  background-color: #eaeaea;
-  border: 1px solid #eaeaea;
-  margin-left: 10px;
-  font-family: "Shand", sans-serif;
-}
-
-.titre {
-  width: 100%;
-  font-size: 45px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  text-align: center;
-  background-color: #f6f6f6;
-  font-family: "Roboto", "trebuchet MS", sans-serif;
-}
-
-.titre h1 {
-  width: 90%;
-  margin-top: 40px;
-  margin-bottom: 30px;
-  font-weight: bold;
-}
-
-.titre p {
-  width: 90%;
-  font-size: 30px;
-  margin-bottom: 20px;
+.banner img {
+  margin: auto;
 }
 
 @media screen and (max-width: 767px) {
-  header {
-    overflow: hidden;
-  }
+  /*header*/
   .logo {
     width: 165px;
-    margin-top: 20px;
-    margin-bottom: 10px;
   }
-  .recherche {
-    width: 100%;
-    height: 50px;
-  }
-  .recherche i {
-    font-size: 13px;
-  }
-  .recherche .search {
-    width: 130px;
-    font-size: 13px;
-  }
-  .titre {
-    font-size: 25px;
-  }
-  .titre h1 {
-    margin-bottom: 15px;
-  }
-  .titre p {
-    font-size: 15px;
-    margin-bottom: 0;
+  .banner i {
+    font-size: 20px;
   }
 }
 
 @media (min-width: null) and (max-width: null) {
+  /*header*/
   .logo {
-    width: 200px;
-    margin-top: 20px;
+    width: 250px;
   }
-  .recherche {
-    height: 80px;
-  }
-  .recherche i {
-    font-size: 20px;
-  }
-  .recherche .search {
-    width: 180px;
-    font-size: 20px;
-  }
-  .titre {
-    font-size: 40px;
+  .banner i {
+    font-size: 30px;
   }
 }
 
@@ -142,11 +76,20 @@ header {
   bottom: 300px;
 }
 
+.note {
+  bottom: 700px;
+  position: relative;
+}
+
 @media screen and (max-width: 767px) {
   .img_menu {
     width: 110%;
     top: 70px;
     right: 10px;
+  }
+  .note {
+    top: -10px;
+    height: 400px;
   }
 }
 
@@ -154,6 +97,9 @@ header {
   .img_menu {
     position: relative;
     top: 0px;
+  }
+  .note {
+    top: -270px;
   }
 }
 
