--- a/menu/sass/layout/_header.scss
+++ b/menu/sass/layout/_header.scss
@@ -1,103 +1,50 @@
-header {
+header{
     overflow: hidden;
+    height: 500px;
 }
-.logo {
-    width: 20%;
-    display: block;
-    margin: auto;
-    margin-top: 40px;
-    margin-bottom: 20px;
-}
-.recherche {
+
+.banner{
     width: 100%;
-    height: 100px;
-    background-color: $color-grey;
-    box-shadow: inset;
-    @include shadow(2px, 2px, 5px, #9c9a9a);
+    background-color: $color-white;
     display: flex;
-    justify-content: center;
     align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    position: absolute;
+    z-index: 1;
+
     & i {
-        font-size: 30px;
+        font-size: 40px;
+        color: black;
+        margin-left: 20px;
     }
-    & .search {
-        width: 19%;
-        font-size: 28px;
-        background-color: $color-grey;
-        border: 1px solid $color-grey;
-        margin-left: 10px;
-        @include police1;
-    }
-}
-.titre {
-    width: 100%;
-    font-size: 45px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-    background-color: $color-grey-light;
-    @include police2;
-    & h1 {
-        width: 90%;
-        margin-top: 40px;
-        margin-bottom: 30px;
-        font-weight: bold;
-    }
-    & p {
-        width: 90%;
-        font-size: 30px;
-        margin-bottom: 20px;
+
+    & img { 
+        margin: auto;
     }
 }
 
 @media screen and (max-width: map-get($breakpoint, mobile)) {
-    header {
-        overflow: hidden;
-    }
+    /*header*/
+
     .logo {
         width: 165px;
-        margin-top: 20px;
-        margin-bottom: 10px;
     }
-    .recherche {
-        width: 100%;
-        height: 50px;
+    .banner {
         & i {
-            font-size: 13px;
-        }
-        & .search {
-            width: 130px;
-            font-size: 13px;
-        }
-    }
-    .titre {
-        font-size: 25px;
-        & h1 {
-            margin-bottom: 15px;
-        }
-        & p {
-            font-size: 15px;
-            margin-bottom: 0;
+            font-size: 20px;
         }
     }
 }
-@media (min-width: map-get($breakpoint, minitablette)) and (max-width: map-get($breakpoint, maxtablette)) {
+@media (min-width: map-get($breakpoint, littletablet)) and (max-width: map-get($breakpoint, bigtablet)) {
+    /*header*/
+    
     .logo {
-        width: 200px;
-        margin-top: 20px;
+        width: 250px;
     }
-    .recherche {
-        height: 80px;
+    .banner {
         & i {
-            font-size: 20px;
+            font-size: 30px;
         }
-        & .search {
-            width: 180px;
-            font-size: 20px;
-        }
-    }
-    .titre {
-        font-size: 40px;
     }
 }
