--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -38,7 +38,7 @@
     right: 5px;
     bottom: 90px;
 }
-@mixin imagestablette {
+@mixin imagestablet {
     width: 105%;
     height: 200px;
     bottom: 40px;
@@ -54,7 +54,7 @@
     padding-top: 10px;
     bottom: 55px;
 }
-@mixin h3tablette {
+@mixin h3tablet {
     height: 70px;
     padding-top: 30px;
     bottom: 60px;
@@ -81,7 +81,7 @@
     bottom: 225%;
     left: 68%;
 }
-@mixin butonnouveautablette {
+@mixin butonnouveautablet {
     width: 100px;
     height: 35px;
     font-size: 20px;
