--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,12 +4,12 @@
 
 @import"./base/_base.scss";
 
-@import"./composant/_bouton";
+@import"./composant/_bouton.scss";
 
 @import"./layout/_header.scss";
 @import"./layout/_nav.scss";
 @import"./layout/_section.scss";
 @import"./layout/_images.scss";
-@import"./layout/_footer";
+@import"./layout/_footer.scss";
 
 
