ajout section.scss

--- a/menu/sass/style_1.scss
+++ b/menu/sass/style_1.scss
@@ -3,9 +3,7 @@
 
 @import"./base/_base.scss";
 
-
-
 @import"./layout/_header.scss";
 @import"./layout/_image.scss";
-
-@import"./layout/_footer";
+@import"./layout/_section.scss";
+@import"./layout/_footer.scss";
