--- a/menu/css/style_1.css
+++ b/menu/css/style_1.css
@@ -103,6 +103,198 @@ header {
   }
 }
 
+/*section*/
+.corps {
+  width: 100%;
+  background-color: #f6f6f6;
+  border-radius: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  top: 430px;
+}
+
+.titre {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  margin-left: 20px;
+}
+
+.titre h1 {
+  width: 100%;
+  height: 40px;
+  font-family: "Shand", sans-serif;
+  font-weight: bold;
+  font-size: 35px;
+}
+
+.titre .far {
+  font-size: 35px;
+  position: absolute;
+  right: 70%;
+  z-index: 1;
+}
+
+.titre .fas {
+  font-size: 35px;
+  position: absolute;
+  right: 70%;
+  display: none;
+}
+
+.repas {
+  width: 30%;
+  font-family: "Roboto", "trebuchet MS", sans-serif;
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+
+.repas h2 {
+  width: 65px;
+  font-size: 28px;
+  border-bottom: 4px solid #99e2d0;
+  margin-bottom: 20px;
+  padding-bottom: 5px;
+}
+
+.repas .navbar {
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.repas li {
+  list-style-type: none;
+  margin-bottom: 15px;
+  width: 90%;
+  height: 75px;
+  box-shadow: 2px 2px 6px #353535;
+  border-radius: 15px;
+  padding-left: 30px;
+}
+
+.text {
+  height: 65px;
+  display: flex;
+  flex-direction: column;
+}
+
+.text_plat {
+  font-weight: bold;
+}
+
+.text_plat--modifier {
+  font-weight: bold;
+  margin-right: 15px;
+  padding-right: 10px;
+}
+
+.text p {
+  margin-top: 10px;
+}
+
+.text_2 {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  /*section*/
+  .corps {
+    border-radius: 30px 30px 0 0;
+    top: 260px;
+  }
+  .titre {
+    width: 90%;
+    margin-left: 10px;
+    margin-bottom: 10px;
+  }
+  .titre h1 {
+    font-size: 25px;
+    width: 250px;
+  }
+  .titre .far,
+  .titre .fas {
+    font-size: 22px;
+    right: 11%;
+  }
+  .repas {
+    width: 96%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+  .repas h2 {
+    font-size: 18px;
+    width: 40px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  .repas .navbar {
+    width: 100%;
+    margin: 0;
+  }
+  .repas .navbar .text {
+    width: 90%;
+    margin: 10px 0px 15px 15px;
+    padding-left: 10px;
+  }
+  .repas .navbar .text_plat {
+    font-size: 15px;
+    margin-top: 15px;
+  }
+  .repas .navbar .text_plat--modifier {
+    font-size: 14px;
+    width: 5%;
+    margin-right: 15px;
+  }
+  .repas .navbar p {
+    font-size: 13px;
+  }
+}
+
+@media (min-width: null) and (max-width: null) {
+  /*section*/
+  .corps {
+    top: 450px;
+    border-radius: 15px;
+    padding: 0;
+  }
+  .titre h1 {
+    font-size: 30px;
+    margin-left: 30px;
+  }
+  .titre .far,
+  .titre .fas {
+    font-size: 30px;
+    right: 52%;
+  }
+  .repas {
+    width: 100%;
+  }
+  .repas h2 {
+    font-size: 25px;
+    margin-left: 30px;
+    margin-bottom: 20px;
+  }
+  .repas .navbar {
+    width: 95%;
+  }
+  .repas .navbar .text {
+    margin: auto;
+    margin-bottom: 25px;
+  }
+  .repas .navbar .text_plat {
+    margin-top: 10px;
+  }
+  .repas .navbar .text p {
+    font-size: 20px;
+  }
+}
+
 /*version ordi*/
 footer {
   background-color: #353535;
