--- a/menu/sass/style_1.scss
+++ b/menu/sass/style_1.scss
@@ -3,6 +3,8 @@
 
 @import"./base/_base.scss";
 
+@import"./composant/_bouton.scss";
+
 @import"./layout/_header.scss";
 @import"./layout/_image.scss";
 @import"./layout/_section.scss";
