--- a/menu/sass/composant/_bouton.scss
+++ b/menu/sass/composant/_bouton.scss
@@ -27,7 +27,7 @@
         margin-bottom: 50px;
     }
 }
-@media (min-width: map-get($breakpoint, littletablette)) and (max-width: map-get($breakpoint, bigtablette)) {
+@media (min-width: map-get($breakpoint, minitablet)) and (max-width: map-get($breakpoint, maxtablet)) {
     .button {
         margin: auto;
         margin-bottom: 60px;
