--- a/menu/sass/layout/_footer.scss
+++ b/menu/sass/layout/_footer.scss
@@ -1,28 +1,30 @@
-/*version ordi*/
+/*footer*/
 footer {
     background-color: $color-grey-dark;
     width: 100%;
-    padding-top: 5px;
-    padding-bottom: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    position: absolute;
+    top: 1000px;
     & h3 {
         @include police1;
         color: $color-white;
-        font-size: 25px;
-        margin: {
-            top: 20px;
-            left: 20px;
-            bottom: 20px;
-        }
+        font-size: 30px;
+        margin-left: 20px;
+        margin-bottom: 15px;
     }
+}
+.enchante {
+    /*footer note enchantée*/
+    top: 1100px;
 }
 footer ul {
     display: flex;
     justify-content: space-between;
-    margin-left: 60px;
-    margin-bottom: 30px;
     & li {
         list-style-type: none;
-        margin-left: -40px;
+        margin-left: 20px;
+        margin-bottom: 20px;
         @include police2;
         width: 20%;
         font-size: 23px;
@@ -38,43 +40,50 @@ footer ul {
     }
 }
 @media screen and (max-width: map-get($breakpoint, mobile)) {
+    /*footer*/
     footer {
-        width: 100%;
+        top: 1460px;
         & h3 {
             font-size: 20px;
+            margin-top: 10px;
         }
+    }
+    .enchante {
+        top: 1560px;
     }
     footer ul {
         flex-direction: column;
-        margin-bottom: 20px;
         & li {
-            width: 90%;
+            width: 80%;
             font-size: 18px;
             margin-bottom: 10px;
         }
         & i {
-            font-size: 16px;
+            font-size: 15px;
         }
     }
 }
-@media (min-width: map-get($breakpoint, minitablette)) and (max-width: map-get($breakpoint, maxtablette)) {
+@media (min-width: map-get($breakpoint, littletablette)) and (max-width: map-get($breakpoint, bigtablette)) {
+    /*footer*/
     footer {
+        top: 1900px;
         & h3 {
             font-size: 32px;
-            margin-bottom: 40px;
         }
+    }
+    .enchante {
+        /*footer note enchantée*/
+        top: 2030px;
     }
     footer ul {
         flex-wrap: wrap;
         justify-content: space-around;
-        margin-right: 0px;
         & li {
             width: 40%;
             font-size: 25px;
-            margin-bottom: 20px;
         }
         & i {
-            font-size: 16px;
+            font-size: 20px;
         }
     }
 }
