--- a/menu/sass/style_1.scss
+++ b/menu/sass/style_1.scss
@@ -4,6 +4,7 @@
 @import"./base/_base";
 
 @import"./composant/_bouton";
+@import"./composant/_animations";
 
 @import"./layout/_header";
 @import"./layout/_image";
