--- a/menu/sass/composant/_bouton.scss
+++ b/menu/sass/composant/_bouton.scss
@@ -1,4 +1,5 @@
-  
+  /*bouton menu indiv desktop*/ 
+
 .button {
     @include police2;
     width: 200px;
@@ -16,6 +17,9 @@
         opacity: 0.8;
     }
 }
+
+/*bouton menu indiv mobile*/ 
+
 @media screen and (max-width: map-get($breakpoint, mobile)) {
     .button {
         width: 180px;
@@ -27,6 +31,9 @@
         margin-bottom: 50px;
     }
 }
+
+/*bouton menu indiv tablet*/ 
+
 @media (min-width: map-get($breakpoint, minitablet)) and (max-width: map-get($breakpoint, maxtablet)) {
     .button {
         margin: auto;
