--- a/menu/sass/layout/_section.scss
+++ b/menu/sass/layout/_section.scss
@@ -1,4 +1,5 @@
-/*section*/
+/*section version desktop*/ 
+
 .corps {
     width: 100%;
     background-color: $color-grey-light;
@@ -86,8 +87,11 @@
     justify-content: space-between;
     width: 100%;
 }
+
+/*section vcersion mobile*/ 
+
 @media screen and (max-width: map-get($breakpoint, mobile)) {
-    /*section*/
+   
     .corps {
         border-radius: 30px 30px 0 0;
         top: 260px;
@@ -142,8 +146,11 @@
         }
     }
 }
+
+/*section version tablet */ 
+
 @media (min-width: map-get($breakpoint, minitablet)) and (max-width: map-get($breakpoint, maxtablet)) {
-    /*section*/
+    
     .corps {
         top: 450px;
         border-radius: 15px;
