--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,6 +10,6 @@ $color-grey-light: rgb(246, 246, 246);
 
 $breakpoint: (
     mobile: 767px,
-    minitablette: 768px,
-    maxtablette: 991px,
+    minitablet: 768px,
+    maxtablet: 991px,
 );
