--- a/menu/sass/style_1.scss
+++ b/menu/sass/style_1.scss
@@ -4,9 +4,9 @@
 @import"./base/_base";
 
 @import"./composant/_bouton";
-@import"./composant/_animations";
+@import"./composant/animations";
 
 @import"./layout/_header";
 @import"./layout/_image";
 @import"./layout/_section";
-@import"./layout/footer";
+@import"./layout/_footer";
